--- a/Week 2.ipynb
+++ b/Week 2.ipynb
@@ -39,14 +39,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-04T16:02:10.628082Z",
      "start_time": "2020-08-04T16:02:10.622093Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Python follows normal mathmatical Order of Operations. Run this code to get the answer and validate this\n",
     "1 + 2 * 3"
@@ -54,14 +65,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-04T16:02:37.948859Z",
      "start_time": "2020-08-04T16:02:37.940881Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# We can augment Order of Operations using parentheses, just like in normal algebra:\n",
     "(1 + 2) * 3"
@@ -69,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,17 +100,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2+5*3"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(4+1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -102,189 +150,332 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-04T16:13:50.847520Z",
      "start_time": "2020-08-04T16:13:50.839541Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'I can write anything within a string either with single quotes or ...'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'I can write anything within a string either with single quotes or ...'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-04T16:13:58.698571Z",
      "start_time": "2020-08-04T16:13:58.691589Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Double Quotes'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"Double Quotes\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-04T16:16:30.215264Z",
      "start_time": "2020-08-04T16:16:30.205292Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"If I want to use apostrophes in my string I need to either use double quotes: can't\""
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"If I want to use apostrophes in my string I need to either use double quotes: can't\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-04T16:16:39.371831Z",
      "start_time": "2020-08-04T16:16:39.360860Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"... or I can use a backslash to tell Python to use the literal value, not special chracter: can't\""
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'... or I can use a backslash to tell Python to use the literal value, not special chracter: can\\'t'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-04T16:17:54.459468Z",
      "start_time": "2020-08-04T16:17:54.448497Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'I'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'I can use an indicator in brackets to say what characters I want from a long string. Here I want the first character'[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-04T16:18:18.688790Z",
      "start_time": "2020-08-04T16:18:18.681810Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Z'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'Here is how I get the last letter: Z'[-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-04T16:19:57.591681Z",
      "start_time": "2020-08-04T16:19:57.582704Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'something in the middle'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'What if I want something in the middle? You need to provide two numbers, separated by a colon, like this'[15:38]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-04T16:21:14.516261Z",
      "start_time": "2020-08-04T16:21:14.508281Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'THERE ARE WAYS TO MAKE ALL THE CHARACTERS UPPER CASE'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'There are ways to make all the characters upper case'.upper()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-04T16:21:32.710674Z",
      "start_time": "2020-08-04T16:21:32.702697Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'or switch everything to lower case'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'OR SWitCH Everything to LOWER CASE'.lower()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-04T16:21:59.268754Z",
      "start_time": "2020-08-04T16:21:59.259777Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'and if you have a lot of whitespace that is causing issues, you can strip it away'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'        and if you have a lot of whitespace that is causing issues, you can strip it away      '.strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-04T16:22:28.267316Z",
      "start_time": "2020-08-04T16:22:28.258341Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'but maybe you want to keep it from the ending     '"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'       but maybe you want to keep it from the ending     '.lstrip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-04T16:22:41.280566Z",
      "start_time": "2020-08-04T16:22:41.272587Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'      or from the beginning'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'      or from the beginning     '.rstrip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-04T16:23:33.283656Z",
      "start_time": "2020-08-04T16:23:33.273683Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'you can also combine two strings, by adding them together like this.'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'you can also combine ' + 'two strings, by adding them together like this.'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,24 +485,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'i love pizza'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'I love pizza'.lower()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'I AM GOING TO STRUGGLE A LOT IN THIS'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'I am going to struggle a lot in this'.upper()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'v'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'I love watching tv'[-1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -326,14 +556,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-04T19:40:20.033385Z",
      "start_time": "2020-08-04T19:40:20.020417Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'my boys name is Bobby'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# first lets set some variables and then try to use them\n",
     "boys_name = 'Bobby'\n",
@@ -344,28 +585,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-04T19:40:34.097641Z",
      "start_time": "2020-08-04T19:40:34.089663Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'girls name isCindy'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'girls name is' + girls_name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-04T19:41:58.896098Z",
      "start_time": "2020-08-04T19:41:58.888111Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# oops, if we do not add the space purposefully, it is not added for us. Something to consider. now how about math??\n",
     "\n",
@@ -377,14 +640,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-04T19:44:14.068459Z",
      "start_time": "2020-08-04T19:44:14.059482Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# by being thoughful about our variable names, we can make math easier to follow, which helps explain what we are doing\n",
     "# with our code. As above, the number twelve minuse one is 11. Using specific variables makes it easy to follow and use\n",
@@ -399,16 +673,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# try to use variables and write an equation that clearly solves this word problem:\n",
     "\n",
     "# Enrique is a local window salesman. He has a quota of selling 50 windows a month. This is the fourth and final week of\n",
     "# the month and we want to know how many more windows Enrique needs to sell to make his quota. We know he sold 5 the first\n",
     "# week, 12 the second week and had a big sale of 25 at the end of week three. How many more windows does he need to sell?\n",
-    "\n"
+    "\n",
+    "one_week = 50\n",
+    "first_week = 5\n",
+    "second_week = 12\n",
+    "third_week = 25\n",
+    "one_week-first_week - second_week - third_week"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-5"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Now copy the answer from above to this cell. Once you copied it, lets change the numbers and see if it still works.\n",
+    "# Lets measure Salma's first three weeks and see how many windows she needs to sell in the final week. Her sales were\n",
+    "# 15 in week 1, 18 in week 2, and 22 in week three.\n",
+    "\n",
+    "one_week = 50\n",
+    "first_week = 15\n",
+    "second_week = 18\n",
+    "third_week = 22\n",
+    "one_week-first_week - second_week - third_week"
    ]
   },
   {
@@ -416,12 +734,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Now copy the answer from above to this cell. Once you copied it, lets change the numbers and see if it still works.\n",
-    "# Lets measure Salma's first three weeks and see how many windows she needs to sell in the final week. Her sales were\n",
-    "# 15 in week 1, 18 in week 2, and 22 in week three.\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
