--- a/Week 2.ipynb
+++ b/Week 2.ipynb
@@ -739,9 +739,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sharepy",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "sharepy"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -753,7 +753,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.3"
   },
   "toc": {
    "base_numbering": 1,
