--- a/Week 3.ipynb
+++ b/Week 3.ipynb
@@ -54,16 +54,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-18T17:22:52.798149Z",
      "start_time": "2020-08-18T17:22:52.792164Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dogs\n",
+      "cats\n",
+      "houses\n",
+      "toys\n",
+      "horses\n",
+      "barns\n"
+     ]
+    }
+   ],
    "source": [
-    "singular_words = ['dog', 'cat', 'house', 'toy']\n"
+    "singular = ['dog', 'cat', 'house', 'toy', 'horse', 'barn']\n",
+    "pluar_words = []\n",
+    "for x in range(6):\n",
+    "    plural_words.append(singular_words[x] + 's')\n",
+    "    print(plural_words[x])\n"
    ]
   },
   {
@@ -77,14 +94,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-18T18:49:06.051285Z",
      "start_time": "2020-08-18T18:49:06.043306Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dogs creatures\n",
+      "cats creatures\n",
+      "houses objects\n",
+      "toys objects\n",
+      "horses creatures\n",
+      "barns objects\n"
+     ]
+    }
+   ],
    "source": [
     "word_catogory = {\n",
     "    'houses':'objects',\n",
@@ -93,7 +123,8 @@
     "    'dogs':'creatures',\n",
     "    'cats':'creatures',\n",
     "    'horses':'creatures'\n",
-    "}\n"
+    "}\n",
+    "for x in range(6):    print(plural_words[x],word_catogory[plural_words[x]])\n"
    ]
   },
   {
@@ -114,12 +145,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'numbers' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-50-0a33094d3bde>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'10234'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'500'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'125'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'52213'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'1440'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'64920'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'225'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'425'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'1'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumbers\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mnumbers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumbers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumbers\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'numbers' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "i=['10234', '500', '125', '52213', '1440', '64920', '225', '425', '1']\n",
+    "\n",
+    "for i in range(0, len(numbers)):\n",
+    "    numbers[i] = int(numbers[i])\n",
+    "print(max(numbers))\n",
+    "print(min(numbers))\n",
+    "print(len(numbers))\n",
+    "\n",
+    "def avg(numbers):\n",
+    "    return sum(numbers)/len(numbers)\n",
+    "\n",
+    "def add(numbers):\n",
+    "    return sum(numbers)\n",
+    "\n",
+    "def remove(numbers):\n",
+    "    numbers.remove(min(numbers))\n",
+    "    numbers.remove(max(numbers))\n",
+    "    return (numbers)\n",
+    "\n",
+    "print(add(numbers))\n",
+    "print(avg(numbers))\n",
+    "print(remove(numbers))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "['10234', '500', '125', '50213', '1440', '64920', '225', '425', '1']\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -138,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   },
   "toc": {
    "base_numbering": 1,
