--- a/Week 3.ipynb
+++ b/Week 3.ipynb
@@ -145,25 +145,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'numbers' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-50-0a33094d3bde>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'10234'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'500'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'125'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'52213'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'1440'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'64920'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'225'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'425'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'1'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumbers\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mnumbers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumbers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumbers\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'numbers' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64920\n",
+      "1\n",
+      "9\n",
+      "130083\n",
+      "14453.666666666666\n",
+      "[10234, 500, 125, 52213, 1440, 225, 425]\n"
      ]
     }
    ],
    "source": [
-    "i=['10234', '500', '125', '52213', '1440', '64920', '225', '425', '1']\n",
+    "numbers=['10234', '500', '125', '52213', '1440', '64920', '225', '425', '1']\n",
     "\n",
     "for i in range(0, len(numbers)):\n",
     "    numbers[i] = int(numbers[i])\n",
